# modelspace

./: .gitignore  .gitmodules  README.md  vsmk.bat  vsmk.rb
common/: shader.cpp  text2D.cpp
source/: AppController.cpp  AppController.h  AppControllerImpl.cpp  CMakeLists.txt  Director.cpp  Director.h  EventCenter.cpp  EventCenter.h  FrameBufferObj.cc  FrameBufferObj.h  InputHost.h  InputProcessor.cpp  InputProcessor.h  InputStdProcessor.cpp  InputStdProcessor.h  LightProtocol.h  LuaScriptor.cpp  LuaScriptor.h  Macros.h  ModelTestWin.vcxproj  ModelTestWin.vcxproj.filters  SourceList  gen_proj.rb  lua_ex.cc  lua_ex.h  main.cpp  protocols.h  script.lua  testcase.h
source/exec/: SimpleNode.lua  debugger.lua  inprogress.lua  script.lua
source/interop/: interopconf.h  luacomm.cc  luacomm.h  luathread.hpp  luavm.cc  luavm.h
source/interop/class/: EsNode.inc  experimental.cpp  experimental.h  exports.cpp  exports.h
source/interop/class/inc/: EsNode.stru  EsNodeWrapper.inc.tmpl  EsNodeWrapper.inc.tmpl2
source/interop/lua_access/: lua_access.cpp  lua_access.h  lua_access_class.cc  lua_access_class.hpp  lua_access_macros.h  refobj.cpp  refobj.h  refproto.cpp  refproto.h
source/interop/lua_core/: lua_core.cpp  lua_core.h  mcore.cpp  mcore.h
source/model/: ObjectModel.cpp  ObjectModel.h
source/nodes/: AxisNode.cpp  AxisNode.h  BlenderNode.cpp  BlenderNode.h  BlenderNormal.cpp  BlenderNormal.h  BoxNode.cpp  BoxNode.h  Common.h  CubeNode.cpp  CubeNode.h  DDNodes.h  EsNode.cpp  EsNode.h  FieldNode.cpp  FieldNode.h  GridNode.cpp  GridNode.h  LightNode.cpp  LightNode.h  MimicNode.cpp  MimicNode.h  PrimitiveNode.cpp  PrimitiveNode.h
source/nodes/effects/: BlenderParticle.cc  BlenderParticle.h  FlagSprite.cc  FlagSprite.h  ParticleNode.cc  ParticleNode.h  ParticleTex.cc  ParticleTex.h
source/nodes/graphics/: DDApi.h  DDGraphics.h  DDStruct.h
source/objects/: cube.json  uvsphere.json  uvsphere8.json  xcube.json
source/shaderman/: exshader.cc  exshader.h  shadercache.cc  shadercache.h
source/shaders/: Diffuse.fsh  Diffuse.vsh  Flag.fsh  Flag.vsh  MimicShader.fsh  MimicShader.vsh  Particle.fsh  Particle.vsh  ParticleCube.fsh  ParticleCube.vsh  ParticleTex.fsh  ParticleTex.vsh  Passthrough.vsh  SimpleVertexShader.vsh  TextVertexShader.fsh  TextVertexShader.vsh  WobblyTexture.fsh
source/test/: test_lua.cpp
source/texture/: ImageData.h  PngImageData.cc  PngImageData.h  TextureData.cc  TextureData.h
source/utils/: gl_object_wrappers.hpp  memo_pool.hpp  raw_object_wrappers.hpp  signals.hpp  signals_conf.h  signalsinc.cc  signalsinc.hpp  state_saver.h
source/utils/io/: DataBuff.cc  DataBuff.h  FileLoader.cc  FileLoader.h
third/luasocket/: CMakeLists.txt
